# timelayer-verifier

./: AGENTS.md  AGENTS.ru.md  Cargo.toml  LICENSE  README.md  README.ru.md  SECURITY.md  SHA256SUMS-v2.0.0.txt  THREAT-MODEL.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
audit/2026-07-14/: README.md  REPORT.md  TRACKER.md  ledger.master.tlbundle  ledger.master.tlcert  ledger.md  plan.md
audit/2026-07-14/receipts/: REP-001.close.tlbundle  REP-001.close.tlcert  REP-001.open.tlbundle  REP-001.open.tlcert  REP-001.release.tlbundle  REP-001.release.tlcert  REP-002.close.tlbundle  REP-002.close.tlcert  REP-002.open.tlbundle  REP-002.open.tlcert  REP-003.close.tlbundle  REP-003.close.tlcert  REP-003.open.tlbundle  REP-003.open.tlcert  REP-010.close.tlbundle  REP-010.close.tlcert  REP-010.open.tlbundle  REP-010.open.tlcert  REP-011.close.tlbundle  REP-011.close.tlcert  REP-011.open.tlbundle  REP-011.open.tlcert  REP-012.close.tlbundle  REP-012.close.tlcert  REP-012.open.tlbundle  REP-012.open.tlcert  REP-013.close.tlbundle  REP-013.close.tlcert  REP-013.open.tlbundle  REP-013.open.tlcert  REP-014.close.tlbundle  REP-014.close.tlcert  REP-014.open.tlbundle  REP-014.open.tlcert  REP-015.close.tlbundle  REP-015.close.tlcert  REP-015.open.tlbundle  REP-015.open.tlcert  REP-016.close.tlbundle  REP-016.close.tlcert  (+50 more)
crates/bins/tl_verifier/: Cargo.toml
crates/bins/tl_verifier/src/: main.rs
crates/tl_canon_types/: Cargo.toml
crates/tl_canon_types/src/: lib.rs
crates/tl_cohort/: Cargo.toml
crates/tl_cohort/src/: lib.rs
crates/tl_cohort_sig/: Cargo.toml
crates/tl_cohort_sig/src/: lib.rs  proof.rs  roster.rs
crates/tl_digest/: Cargo.toml
crates/tl_digest/src/: lib.rs
crates/tl_finality/: Cargo.toml
crates/tl_finality/src/: lib.rs
crates/tl_invariants/: Cargo.toml
crates/tl_invariants/src/: lib.rs
crates/tl_receipts/: Cargo.toml
crates/tl_receipts/src/: lib.rs
crates/tl_rw_core/: Cargo.toml
crates/tl_rw_core/src/: lib.rs
crates/tl_shadow/: Cargo.toml
crates/tl_shadow/src/: lib.rs
crates/tl_touch/: Cargo.toml
crates/tl_touch/src/: lib.rs
crates/tl_verify_authn/: Cargo.toml
crates/tl_verify_authn/src/: lib.rs
crates/tl_verify_public/: Cargo.toml
crates/tl_verify_public/src/: lib.rs
mcp/: README.md  tl_verify_mcp.py
pubkeys/epoch-2/: operator-1.txt  operator-2.txt  operator-3.txt  operator-katerina.txt  operator-sasha.txt  operator-vlad.txt  roster.txt
src/: lib.rs  main.rs  receipt.rs
testvectors/: forged.tlsig  roster.txt  valid.tlsig
testvectors/forged/: bundle.tlbundle  cert.tlcert
testvectors/valid/: bundle.tlbundle  cert.tlcert
