[workspace]
resolver = "2"
members = [
    "crates/tl_canon_types",
    "crates/tl_digest",
    "crates/tl_rw_core",
    "crates/tl_shadow",
    "crates/tl_touch",
    "crates/tl_cohort",
    "crates/tl_receipts",
    "crates/tl_finality",
    "crates/tl_invariants",
    "crates/tl_verify_public",
    "crates/tl_cohort_sig",
    "crates/tl_verify_authn",
    "crates/bins/tl_verifier",
]

[workspace.package]
edition = "2021"
version = "1.4.0"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
blake3 = "1.5"
ed25519-dalek = "2"
getrandom = "0.2"
tl_canon_types = { path = "crates/tl_canon_types" }
tl_digest = { path = "crates/tl_digest" }
tl_rw_core = { path = "crates/tl_rw_core" }
tl_shadow = { path = "crates/tl_shadow" }
tl_touch = { path = "crates/tl_touch" }
tl_cohort = { path = "crates/tl_cohort" }
tl_receipts = { path = "crates/tl_receipts" }
tl_finality = { path = "crates/tl_finality" }
tl_invariants = { path = "crates/tl_invariants" }
tl_verify_public = { path = "crates/tl_verify_public" }
tl_cohort_sig = { path = "crates/tl_cohort_sig" }
tl_verify_authn = { path = "crates/tl_verify_authn" }

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
