[package]
name = "tl_verify_authn"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Public (offline) build: compiles out internal diagnostic vocabulary, matching
# tl_verify_public so the shipped verifier binary leaks no mechanism strings.
public = ["tl_verify_public/public"]

[dependencies]
tl_canon_types.workspace = true
tl_cohort_sig.workspace = true
tl_digest.workspace = true
tl_finality.workspace = true
tl_verify_public.workspace = true

[dev-dependencies]
tl_receipts.workspace = true
