[package]
name = "tl_verify_public"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Public offline build: compiles out internal diagnostic vocabulary (labels and
# error-variant Debug strings) so they never reach the shipped binary.
public = []

[dependencies]
tl_canon_types.workspace = true
tl_cohort.workspace = true
tl_digest.workspace = true
tl_finality.workspace = true
tl_receipts.workspace = true
tl_rw_core.workspace = true
tl_shadow.workspace = true
