[package]
name = "tl_verifier"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "timelayer-verifier"
path = "src/main.rs"

[features]
# Offline public verifier: strips internal diagnostic vocabulary so it never
# reaches the shipped binary. This is the only build this repo produces; the
# online cross-check path lives in the internal tree, not here.
default = ["public"]
public = ["tl_verify_public/public"]

[dependencies]
tl_receipts.workspace = true
tl_verify_public.workspace = true
